--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>JS + CSS Clock</title>
-		<link href="https://fonts.googleapis.com/css?family=Alice|Antic+Didone|Arapey|Caudex:700|Laila" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<meta name='viewport' content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<div class=test></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Stylish Clock</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Alice|Antic+Didone|Arapey|Caudex:700|Laila"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="message heading">It's okay to keep track...</div>
+    <div class="message footing">Just do it in style</div>
 
-		<div class="clock">
-			<div class='borderDot'></div>
-			<div class="container">
-				<div class="hand hour-hand">
-					<div class='filler'></div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="hand min-hand">
-					<div class='filler'></div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="hand second-hand">
-					<div class='filler'></div>
-				</div>
-			</div>
-			<!-- <div class='gridder'></div>
-			<div class='gridder'></div>
-			<div class='gridder'></div>
-			<div class='gridder'></div> -->
-			<div class='numberBox' data-number='1'><span>X</span></div>
-			<div class='numberBox' data-number='2'><span>X</span></div>
-			<div class='numberBox' data-number='3'><span>X</span></div>
-			<div class='numberBox' data-number='4'><span>X</span></div>
-			<div class='numberBox' data-number='5'><span>X</span></div>
-			<div class='numberBox' data-number='6'><span>X</span></div>
-			<div class='numberBox' data-number='7'><span>X</span></div>
-			<div class='numberBox' data-number='8'><span>X</span></div>
-			<div class='numberBox' data-number='9'><span>X</span></div>
-			<div class='numberBox' data-number='10'><span>X</span></div>
-			<div class='numberBox' data-number='11'><span>X</span></div>
-			<div class='numberBox' data-number='12'><span>X</span></div>
-		</div>
+    <div class="clock">
+      <div class="borderDot"></div>
+      <div class="container">
+        <div class="hand hour-hand">
+          <div class="filler"></div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="hand min-hand">
+          <div class="filler"></div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="hand second-hand">
+          <div class="filler"></div>
+        </div>
+      </div>
+      <div class="numberBox" data-number="1"><span>X</span></div>
+      <div class="numberBox" data-number="2"><span>X</span></div>
+      <div class="numberBox" data-number="3"><span>X</span></div>
+      <div class="numberBox" data-number="4"><span>X</span></div>
+      <div class="numberBox" data-number="5"><span>X</span></div>
+      <div class="numberBox" data-number="6"><span>X</span></div>
+      <div class="numberBox" data-number="7"><span>X</span></div>
+      <div class="numberBox" data-number="8"><span>X</span></div>
+      <div class="numberBox" data-number="9"><span>X</span></div>
+      <div class="numberBox" data-number="10"><span>X</span></div>
+      <div class="numberBox" data-number="11"><span>X</span></div>
+      <div class="numberBox" data-number="12"><span>X</span></div>
+    </div>
 
-
-		<script src="script.js"></script>
-	</body>
+    <script src="script.js"></script>
+  </body>
 </html>
