--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="message heading">It's okay to keep track...</div>
+    <div class="message heading">Keep track if you must</div>
     <div class="message footing">Just do it in style</div>
 
     <div class="clock">
