--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="message heading">Keep track if you must</div>
-    <div class="message footing">Just do it in style</div>
+    <div class="message">Passing time...</div>
 
     <div class="clock">
       <div class="borderDot"></div>
@@ -44,6 +43,7 @@
       <div class="numberBox" data-number="11"><span>X</span></div>
       <div class="numberBox" data-number="12"><span>X</span></div>
     </div>
+    <div class="message">...showing style</div>
 
     <script src="script.js"></script>
   </body>
